# lattice

./: Cargo.toml  README.md
crates/lattice-agents/: Cargo.toml
crates/lattice-agents/manifests/: cursor-agent.toml
crates/lattice-agents/src/: error.rs  lib.rs  manifest.rs  queue.rs  registry.rs  runner.rs
crates/lattice-agents/tests/: queue_integration.rs  runner_integration.rs
crates/lattice-bin/: Cargo.toml
crates/lattice-bin/src/: default_templates.rs  main.rs
crates/lattice-components/: Cargo.toml
crates/lattice-components/src/: lib.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: error.rs  ids.rs  lib.rs  time.rs
crates/lattice-core/src/derived/: mod.rs
crates/lattice-core/src/entities/: mod.rs  project.rs  queue.rs  run.rs  settings.rs  task.rs  template.rs
crates/lattice-core/src/fields/: mod.rs  validation.rs
crates/lattice-core/src/prompt/: filters.rs  mod.rs  skeleton.rs
crates/lattice-core/src/validation/: mod.rs
crates/lattice-core/tests/: render_golden.rs
crates/lattice-core/tests/fixtures/templates/: bug_fix.toml
crates/lattice-core/tests/snapshots/: render_golden__bug_fix_render.snap  render_golden__canonical_skeleton_render.snap  render_golden__minimal_prompt_render.snap
crates/lattice-store/: Cargo.toml
crates/lattice-store/src/: cache.rs  error.rs  filestore.rs  lib.rs  providers.rs  watcher.rs
crates/lattice-store/src/fs/: mod.rs
crates/lattice-store/src/paths/: mod.rs
crates/lattice-store/src/store/: mod.rs
crates/lattice-tui/: Cargo.toml
crates/lattice-tui/src/: app.rs  context.rs  event.rs  keybind.rs  lib.rs  model.rs  palette.rs  toast.rs  view.rs
crates/lattice-tui/src/screens/: help.rs  history.rs  mod.rs  projects.rs  runtime.rs  settings.rs  tasks.rs  templates.rs
crates/lattice-tui/tests/: render_smoke.rs
docs/: AGENTS.md  ARCHITECTURE.md  DATA_MODEL.md  README.md  SPEC.md  TEMPLATES.md
