[workspace]
resolver = "2"
members = [
    "crates/lattice-core",
    "crates/lattice-store",
    "crates/lattice-agents",
    "crates/lattice-tui",
    "crates/lattice-bin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/manuelgdlvh/lattice"
authors = ["lattice contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
too_many_lines = "allow"
# NOTE: `unwrap_used`, `expect_used`, `panic` are enforced per-module
# rather than globally. Library code denies them via a module-level
# `#![warn(clippy::unwrap_used)]` where appropriate; test code is
# exempted. Globally forcing these makes test code unbearable.

[workspace.dependencies]
# Internal crates
lattice-core = { path = "crates/lattice-core" }
lattice-store = { path = "crates/lattice-store" }
lattice-agents = { path = "crates/lattice-agents" }
lattice-tui = { path = "crates/lattice-tui" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# IDs + time
uuid = { version = "1", features = ["serde", "v7"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Errors + logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Rendering + parsing
minijinja = "2"
regex = "1"

# Filesystem + OS
directories = "6"
notify = "8"
which = "7"
lru = "0.16"

# TUI
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3"
futures-core = "0.3"

# Utilities
parking_lot = "0.12"

# Dev / test
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
rstest = "0.26"
tokio-test = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
