[package]
name = "lattice-components"
description = "Interactive components registry for lattice (C4 and beyond)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
lattice-core.workspace = true
