[package]
name = "lattice-core"
description = "Core domain model and pure logic for lattice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
minijinja.workspace = true
regex.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
tempfile.workspace = true
