[package]
name = "lattice-store"
description = "Persistence layer for lattice: file-backed store, cache, watcher."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
lattice-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["fs", "sync", "rt", "macros", "time"] }
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
directories.workspace = true
notify.workspace = true
lru.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test.workspace = true
rstest.workspace = true
