[package]
name = "lattice-tui"
description = "Terminal UI layer for lattice."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
lattice-core.workspace = true
lattice-store.workspace = true
lattice-agents.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures-util.workspace = true
futures-core.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
minijinja.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
insta.workspace = true
